# PhysicsEngine

./: CMakeLists.txt
shaders/: basic.frag  wire.vert
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
src/graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/physics/: RigidBody.cpp  RigidBody.h
src/physics/bodies/: RigidBody.cpp  RigidBody.h
src/physics/collision/: AABB.h  Collider.h  Collision.h  ContactManifold.h  ContactSolver.cpp  ContactSolver.h  SATCollision.cpp  SATCollision.h
src/physics/shapes/: BoxShape.h  Shape.h  SphereShape.h
